--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-requests==2.31.0
-pandas==2.1.1
 streamlit==1.27.2
+pandas==2.1.1
+numpy==1.24.3
 plotly==5.17.0
-numpy==1.24.3 
+requests==2.31.0
+setuptools==69.0.3
+pip>=24.0 
