--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit==1.27.2
-pandas==2.1.1
-numpy==1.24.3
+pandas==2.0.3
+numpy==1.26.0
 plotly==5.17.0
 requests==2.31.0
-setuptools==69.0.3
+setuptools>=69.0.3
 pip>=24.0 
